# MTR

./: .gitignore  CMakeLists.txt  Makefile  geometry.cpp  geometry.h  main  main.cpp  model.cpp  model.h  output.tga  readme.md  run.sh  tgaimage.cpp  tgaimage.h  trans.cpp  trans.h
core/include/: api.h  camera.h  geometry.h  light.h  matrix.h  model.h  scene.h  tgaimage.h  trans.h  utils.h
core/src/: camera.cpp  model.cpp  scene.cpp  trans.cpp  utils.cpp
platform/include/: show.h
platform/src/: show.cpp
shader/: depthshader.h  gouraudshader.h  ishader.h  zshader.h
